# spencer_messages

spencer_human_attribute_msgs/: CMakeLists.txt  package.xml
spencer_human_attribute_msgs/msg/: HumanAttributes.msg
spencer_social_relation_msgs/: CMakeLists.txt  package.xml
spencer_tracking_msgs/: CMakeLists.txt  package.xml
spencer_tracking_msgs/msg/: CompositeDetectedPersons.msg  DetectedPersons.msg  ImmDebugInfo.msg  ImmDebugInfos.msg  PersonTrajectoryEntry.msg  TrackedGroup.msg  TrackedGroups.msg  TrackedPerson.msg  TrackedPersons2d.msg  TrackingTimingMetrics.msg
spencer_tracking_msgs/srv/: GetPersonTrajectories.srv
spencer_vision_msgs/: CMakeLists.txt  package.xml
spencer_vision_msgs/msg/: PersonROI.msg
